test/typecheck/fail/abstract_type_type.sail
$option --abstract-types

type a : Type
